--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sequelize-cli": "^6.6.0",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-themes": "^1.4.3",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "ts-node-dev": "2.0.0",
-    "typescript": "^5.5.3",
-    "@types/joy": "^17.2.3"
+    "typescript": "^5.5.3"
   }
 }
